--- a/EcoCareApp/EcoCareApp/Views/Loading.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Loading.xaml
@@ -1,12 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="EcoCareApp.Views.Loading">
+             x:Class="EcoCareApp.Views.Loading"
+             >
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Loading"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+            <!--<Image x:Name="LoadingImg"  gif:AnimationBehavior.SourceUri="Resources/LoadingGif.gif"/>-->
+            <!--<Image x:Name="LoadingGif" Source="loading_gif.gif" IsAnimationPlaying="True"/>-->
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
