--- a/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
+++ b/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
@@ -7,7 +7,7 @@
     </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout>
-           <Grid Style="{StaticResource SignUpG}" >
+            <Grid Style="{StaticResource SignUpG}" >
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
                     <!--Image-->
@@ -18,170 +18,163 @@
                     <Image Source="images/sign_up.jpg" Aspect="AspectFill" />
                     <!--Image-->
                 </Grid>
-                
-                <Grid Style="{StaticResource logInSignUpDivG}" >
-                    <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                    </Grid.RowDefinitions>
-                    <Frame  Style="{StaticResource logInSignUp}">
-                        <!--Div/Box-->
-                        <ScrollView>
-                            <StackLayout Padding="0" >
-                                <Label Text="Welcome To Eco Care App, Let the fun begin" Grid.ColumnSpan="2" Style="{StaticResource smallerTitle}"/>
-                                <!--Title-->
-                                <Label Style="{StaticResource link}">
-                                    <Label.FormattedText>
-                                        <FormattedString>
-                                            <Span Text="Already One Of Us? " Style="{StaticResource linkPartA}"></Span>
-                                            <Span Text="Log In" Style="{StaticResource linkPartB}">
-                                                <Span.GestureRecognizers>
-                                                    <TapGestureRecognizer Command="{Binding MoveToLogIn}"></TapGestureRecognizer>
-                                                </Span.GestureRecognizers>
-                                            </Span>
-                                        </FormattedString>
-                                    </Label.FormattedText>
-                                </Label>
+
+                <!--Div/Box-->
+                <ScrollView Style="{StaticResource logInSignUpDivS}">
+                    <StackLayout Padding="0" >
+                        <Label Text="Welcome To Eco Care App, Let the fun begin" Grid.ColumnSpan="2" Style="{StaticResource smallerTitle}"/>
+                        <!--Title-->
+                        <Label Style="{StaticResource link}">
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span Text="Already One Of Us? " Style="{StaticResource linkPartA}"></Span>
+                                    <Span Text="Log In" Style="{StaticResource linkPartB}">
+                                        <Span.GestureRecognizers>
+                                            <TapGestureRecognizer Command="{Binding MoveToLogIn}"></TapGestureRecognizer>
+                                        </Span.GestureRecognizers>
+                                    </Span>
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
 
 
 
-                                <Grid Grid.Row="2" Grid.Column="0">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <Label Text="First Name" Grid.Column="0" Style="{StaticResource labelNameStyle}" IsVisible="{Binding FirstNameTyped}"/>
-                                    <Label Text="{Binding FirstNameError}" IsVisible="{Binding ShowFirstNameError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
-                                </Grid>
-                                <Entry Grid.Row="3" Placeholder="Enter your first name" Text="{Binding FirstName}" Style="{StaticResource entry}"/>
+                        <Grid Grid.Row="2" Grid.Column="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Label Text="First Name" Grid.Column="0" Style="{StaticResource labelNameStyle}" IsVisible="{Binding FirstNameTyped}"/>
+                            <Label Text="{Binding FirstNameError}" IsVisible="{Binding ShowFirstNameError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
+                        </Grid>
+                        <Entry Grid.Row="3" Placeholder="Enter your first name" Text="{Binding FirstName}" Style="{StaticResource entry}"/>
 
-                                <Grid Grid.Row="2" Grid.Column="1">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <Label Text="Last Name" Grid.Column="0" Style="{StaticResource labelNameStyle}"
+                        <Grid Grid.Row="2" Grid.Column="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Label Text="Last Name" Grid.Column="0" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding LastNameTyped}"/>
-                                    <Label Text="{Binding LastNameError}" IsVisible="{Binding ShowLastNameError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
-                                </Grid>
-                                <Entry Grid.Row="3" Grid.Column="1" Placeholder="Enter your last name" Text="{Binding LastName}" Style="{StaticResource entry}"/>
+                            <Label Text="{Binding LastNameError}" IsVisible="{Binding ShowLastNameError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
+                        </Grid>
+                        <Entry Grid.Row="3" Grid.Column="1" Placeholder="Enter your last name" Text="{Binding LastName}" Style="{StaticResource entry}"/>
 
 
 
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <Label Text="User Name" Grid.Column="0" Style="{StaticResource labelNameStyle}"
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Label Text="User Name" Grid.Column="0" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding UserNameTyped}"/>
-                                    <Label Text="{Binding UserNameError}" IsVisible="{Binding ShowUserNameError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
-                                </Grid>
-                                <Entry Grid.Row="5" Grid.ColumnSpan="2" Placeholder="Type a usrname" Text="{Binding UserName}" Style="{StaticResource entry}"/>
+                            <Label Text="{Binding UserNameError}" IsVisible="{Binding ShowUserNameError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
+                        </Grid>
+                        <Entry Grid.Row="5" Grid.ColumnSpan="2" Placeholder="Type a usrname" Text="{Binding UserName}" Style="{StaticResource entry}"/>
 
-                                <Grid Grid.ColumnSpan="2" Grid.Row="6">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <Label Text="Email" Grid.Column="0" Style="{StaticResource labelNameStyle}"
+                        <Grid Grid.ColumnSpan="2" Grid.Row="6">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Label Text="Email" Grid.Column="0" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding EmailTyped}"/>
-                                    <Label Text="{Binding EmailError}" IsVisible="{Binding ShowEmailError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
-                                </Grid>
-                                <Entry Grid.Row="7" Grid.ColumnSpan="2" Placeholder="Type an email" Text="{Binding Email}" Style="{StaticResource entry}"/>
+                            <Label Text="{Binding EmailError}" IsVisible="{Binding ShowEmailError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
+                        </Grid>
+                        <Entry Grid.Row="7" Grid.ColumnSpan="2" Placeholder="Type an email" Text="{Binding Email}" Style="{StaticResource entry}"/>
 
 
 
 
 
 
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <Label Text="Password" Grid.Column="0" Style="{StaticResource labelNameStyle}"
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Label Text="Password" Grid.Column="0" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding PasswordTyped}"/>
-                                    <Label Text="{Binding PasswordError}" IsVisible="{Binding ShowPasswordError}"
+                            <Label Text="{Binding PasswordError}" IsVisible="{Binding ShowPasswordError}"
                        Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
-                                </Grid>
+                        </Grid>
 
 
-                                <Grid Grid.Row="9" Grid.ColumnSpan="2">
-                                    <Entry Placeholder="Password"
+                        <Grid Grid.Row="9" Grid.ColumnSpan="2">
+                            <Entry Placeholder="Password"
                 IsPassword="{Binding Source={x:Reference ShowPasswordActualTrigger}, Path=HidePassword}" 
                        Text="{Binding Password}" Style="{StaticResource entry}"/>
 
-                                    <ImageButton VerticalOptions="Center"
+                            <ImageButton VerticalOptions="Center"
                       Margin="0,0,10,0"
                      HeightRequest="20"
                      HorizontalOptions="End"
                      Source="images/ic_eye_hide.png">
-                                        <ImageButton.Triggers>
-                                            <EventTrigger Event="Clicked">
-                                                <local:ShowPasswordTriggerAction ShowIcon="ic_eye.png"
+                                <ImageButton.Triggers>
+                                    <EventTrigger Event="Clicked">
+                                        <local:ShowPasswordTriggerAction ShowIcon="ic_eye.png"
                                                                     HideIcon="ic_eye_hide.png"
                                                                     x:Name="ShowPasswordActualTrigger"/>
-                                            </EventTrigger>
-                                        </ImageButton.Triggers>
-                                    </ImageButton>
-                                </Grid>
+                                    </EventTrigger>
+                                </ImageButton.Triggers>
+                            </ImageButton>
+                        </Grid>
 
 
 
 
-                                <Grid Grid.Row="10" Grid.ColumnSpan="2">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <Label Text="Country" Grid.Column="0" Style="{StaticResource labelNameStyle}"
+                        <Grid Grid.Row="10" Grid.ColumnSpan="2">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Label Text="Country" Grid.Column="0" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding CountryTyped}"/>
-                                </Grid>
-                                <Entry Grid.ColumnSpan="2" Placeholder="Select your country" />
-                                <Button Command="{Binding PopUpCountriesClicked}"/>
+                        </Grid>
+                        <Entry Grid.ColumnSpan="2" Placeholder="Select your country" />
+                        <Button Command="{Binding PopUpCountriesClicked}"/>
 
-                                <Grid Grid.Row="12" Grid.ColumnSpan="2">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <Label Text="Date of Birth" Grid.Column="0" Style="{StaticResource labelNameStyle}"
+                        <Grid Grid.Row="12" Grid.ColumnSpan="2">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Label Text="Date of Birth" Grid.Column="0" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding BirthdayTyped}"/>
-                                    <Label Text="{Binding BirthdayError}" IsVisible="{Binding ShowBirthdayError}"
+                            <Label Text="{Binding BirthdayError}" IsVisible="{Binding ShowBirthdayError}"
                        Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
-                                </Grid>
+                        </Grid>
 
-                                <DatePicker Grid.Row="13" Grid.ColumnSpan="2" x:Name="startDatePicker"
+                        <DatePicker Grid.Row="13" Grid.ColumnSpan="2" x:Name="startDatePicker"
                     Format="D"
                     Date="{Binding Birthday}" />
 
 
-                            <Button Grid.Row="14" Grid.ColumnSpan="2" Text="Sign Up" Command="{Binding ResigterUser}"></Button>
-                        </StackLayout>
-                        </ScrollView>
+                        <Button Grid.Row="14" Grid.ColumnSpan="2" Text="Sign Up" Command="{Binding ResigterUser}"></Button>
+                    </StackLayout>
+                </ScrollView>
 
-                    </Frame>
-                </Grid>
             </Grid>
 
         </StackLayout>
