--- a/EcoCareApp/EcoCareApp/Views/RegisterOwner.xaml
+++ b/EcoCareApp/EcoCareApp/Views/RegisterOwner.xaml
@@ -21,9 +21,10 @@
                 </Grid.RowDefinitions>
                 <Frame Grid.Row="2" Style="{StaticResource logInSignUp}" >
                     <!--Div/Box-->
-                    <Grid Padding="0" >
+
+                    <ScrollView>
+                        <Grid Padding="0" >
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition></ColumnDefinition>
                             <ColumnDefinition></ColumnDefinition>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
@@ -34,15 +35,19 @@
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
-                            <!--Back Button-->
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+
+                                <!--Back Button-->
                         </Grid.RowDefinitions>
-                        <!--<Label Text="Register owner"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-            <Entry x:Name="un" Text="{Binding UserName}" Placeholder="Choose a user name"/>
-            <Entry x:Name="pass" Text="{Binding Password}" IsPassword="True" Placeholder="Password"/>
-            <Entry x:Name="mail" Text="{Binding Email}" Placeholder="Email"/>
-            <DatePicker x:Name="startDatePicker"
+                            <Label Text="Register owner" Grid.Row="0" Style="{StaticResource title}" />
+                        <!--
+                        <DatePicker x:Name="startDatePicker"
                     Format="D"
                     Date="{Binding Birthday}" />
             <Entry x:Name="country" Text="{Binding Country}" Placeholder="Country"/>
@@ -51,7 +56,7 @@
             <Label Text="{Binding Label}"></Label>
             <Button Text="Sign Up" Command="{Binding Register}"></Button>-->
 
-                        <Grid>
+                        <Grid Grid.Row="1">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
@@ -62,9 +67,9 @@
                             <Label Text="First Name" Grid.Column="0" Style="{StaticResource labelNameStyle}" IsVisible="{Binding FirstNameTyped}"/>
                             <Label Text="{Binding FirstNameError}" IsVisible="{Binding ShowFirstNameError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
                         </Grid>
-                        <Entry Placeholder="Enter your first name" Text="{Binding FirstName}" Style="{StaticResource entry}"/>
+                        <Entry Grid.Row="2" Placeholder="Enter your first name" Text="{Binding FirstName}" Style="{StaticResource entry}"/>
 
-                        <Grid>
+                        <Grid Grid.Row="3">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
@@ -76,11 +81,11 @@
                        IsVisible="{Binding LastNameTyped}"/>
                             <Label Text="{Binding LastNameError}" IsVisible="{Binding ShowLastNameError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
                         </Grid>
-                        <Entry Placeholder="Enter your last name" Text="{Binding LastName}" Style="{StaticResource entry}"/>
+                        <Entry Grid.Row="4" Placeholder="Enter your last name" Text="{Binding LastName}" Style="{StaticResource entry}"/>
 
 
 
-                        <Grid>
+                        <Grid Grid.Row="5">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
@@ -92,9 +97,9 @@
                        IsVisible="{Binding UserNameTyped}"/>
                             <Label Text="{Binding UserNameError}" IsVisible="{Binding ShowUserNameError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
                         </Grid>
-                        <Entry Placeholder="Type a usrname" Text="{Binding UserName}" Style="{StaticResource entry}"/>
+                        <Entry Grid.Row="6" Placeholder="Type a usrname" Text="{Binding UserName}" Style="{StaticResource entry}"/>
 
-                        <Grid>
+                        <Grid Grid.Row="7">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
@@ -106,14 +111,14 @@
                        IsVisible="{Binding EmailTyped}"/>
                             <Label Text="{Binding EmailError}" IsVisible="{Binding ShowEmailError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
                         </Grid>
-                        <Entry Placeholder="Type an email" Text="{Binding Email}" Style="{StaticResource entry}"/>
+                        <Entry Grid.Row="8" Placeholder="Type an email" Text="{Binding Email}" Style="{StaticResource entry}"/>
 
 
 
 
 
 
-                        <Grid>
+                        <Grid Grid.Row="9">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
@@ -127,8 +132,7 @@
                        Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
                         </Grid>
 
-
-                        <Grid>
+                        <Grid Grid.Row="10">
                             <Entry Placeholder="Password"
                 IsPassword="{Binding Source={x:Reference ShowPasswordActualTrigger}, Path=HidePassword}" 
                        Text="{Binding Password}" Style="{StaticResource entry}"/>
@@ -148,7 +152,7 @@
                             </ImageButton>
                         </Grid>
 
-                        <Grid>
+                        <Grid Grid.Row="11">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
@@ -160,12 +164,12 @@
                        IsVisible="{Binding PhoneNumTyped}"/>
                             <Label Text="{Binding PhoneNumError}" IsVisible="{Binding ShowPhoneNumError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
                         </Grid>
-                        <Entry Placeholder="Type your phone number" Text="{Binding PhoneNum}" Style="{StaticResource entry}" Keyboard="Numeric"/>
+                        <Entry Grid.Row="12" Placeholder="Type your phone number" Text="{Binding PhoneNum}" Style="{StaticResource entry}" Keyboard="Numeric"/>
 
 
 
 
-                        <Grid>
+                        <Grid Grid.Row="13">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
@@ -175,7 +179,7 @@
                             <Label Text="Country" Grid.Column="0" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding CountryTyped}"/>
                         </Grid>
-                        <Picker Title="Select your country"
+                        <Picker Grid.Row="14" Title="Select your country"
         TitleColor="Blue"
         ItemsSource="{Binding CountriesList}"
         ItemDisplayBinding="{Binding CountryName}"
@@ -184,8 +188,10 @@
 
 
 
-                        <Button Text="Sign Up" Command="{Binding ResigterUser}"></Button>
+                        <Button Text="Sign Up" Grid.Row="15" Command="{Binding ResigterUser}"></Button>
                     </Grid>
+                    </ScrollView>
+
                 </Frame>
             </Grid>
         </Grid>
